# autoclick-rs

./: README.md  install-macos.sh  install.sh
.cargo/: config.toml
.github/workflows/: build.yml
assets/: autoclick-rs.desktop
linux/: Cargo.toml  build.sh
linux/src/: app.rs  detect.rs  engine.rs  keyboard.rs  targets.rs
linux/src/injector/: mod.rs  uinput.rs  x11.rs
linux/ui/: main.slint
macos/: Cargo.toml  build.rs
macos/src/: app.rs  engine.rs  injector.rs  keyboard.rs  main.rs  targets.rs
macos/ui/: main.slint
src/: detect.rs  main.rs
src/injector/: x11.rs
windows/: Cargo.toml
windows/src/: app.rs  engine.rs  injector.rs  keyboard.rs  main.rs
windows/src/sender/: console.rs  mod.rs  postmessage.rs  sendinput.rs
windows/src/targets/: gui.rs  mod.rs  terminal.rs
windows/ui/: main.slint
