[package]
name = "autoclick-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software"] }
core-graphics = "0.24"
core-foundation = "0.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
