[package]
name = "autoclick-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software"] }
windows = { version = "0.58", default-features = false, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-unwind]
inherits = "release"
panic = "unwind"
